# Deep-Q-Learning-Market-Maker-on-a-Synthetic-Limit-Order-Book

./: .gitignore  README.md  pyproject.toml  pyproject.toml.conflict1  pyproject.toml.conflict2
configs/: dqn_default.yaml
dashboard/: app.py
data/processed/simulations/: compare_results.json  evaluations.npz
data/processed/simulations/tb_logs/DQN_1/: events.out.tfevents.1777223494.archlinux.145119.0
data/processed/simulations/tb_logs/DQN_2/: events.out.tfevents.1777399060.archlinux.11790.0
data/processed/simulations/tb_logs/DQN_3/: events.out.tfevents.1777457498.archlinux.170117.0
data/processed/simulations/tb_logs/DQN_4/: events.out.tfevents.1777540828.archlinux.12461.0
data/processed/simulations/tb_logs/DQN_5/: events.out.tfevents.1777555710.archlinux.322135.0
data/processed/simulations/tb_logs/DQN_6/: events.out.tfevents.1777623915.archlinux.131917.0
data/processed/simulations/tb_logs/DQN_7/: events.out.tfevents.1777624334.archlinux.143426.0
rl_market_maker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rl_market_maker/rl_market_maker.egg-info/: SOURCES.txt
src/envs/: lob_simulator.py  market_making_env.py
src/experiments/: compare_policies.py  train_dqn.py
src/integration/: volatility_model.py
src/policies/: __init__.py  avellaneda_stoikov.py  rl_dqn_agent.py
src/rl_market_maker.egg-info/: PKG-INFO  requires.txt  top_level.txt
src/utils/: config.py  metrics.py
